[GLT-3848] fix deleting run-library link when removing pool