@@ -30,9 +30,9 @@ public class HibernateSiblingNumberGeneratorIT extends AbstractDAOTest {
     DetailedSample s1 = (DetailedSample) sessionFactory.getCurrentSession().get(SampleImpl.class, 16L);
     DetailedSample s2 = (DetailedSample) sessionFactory.getCurrentSession().get(SampleImpl.class, 17L);
     assertTrue(s1.getAlias().startsWith(partialAlias));
-    assertEquals(new Integer(1), s1.getSiblingNumber());
+    assertEquals(Integer.valueOf(1), s1.getSiblingNumber());
     assertTrue(s2.getAlias().startsWith(partialAlias));
-    assertEquals(new Integer(2), s2.getSiblingNumber());
+    assertEquals(Integer.valueOf(2), s2.getSiblingNumber());
     assertEquals(5, sut.getNextSiblingNumber(SampleImpl.class, partialAlias));
   }
 
@@ -42,9 +42,9 @@ public class HibernateSiblingNumberGeneratorIT extends AbstractDAOTest {
     DetailedSample s1 = (DetailedSample) sessionFactory.getCurrentSession().get(SampleImpl.class, 16L);
     DetailedSample s2 = (DetailedSample) sessionFactory.getCurrentSession().get(SampleImpl.class, 17L);
     assertTrue(s1.getAlias().startsWith(partialAlias));
-    assertEquals(new Integer(1), s1.getSiblingNumber());
+    assertEquals(Integer.valueOf(1), s1.getSiblingNumber());
     assertTrue(s2.getAlias().startsWith(partialAlias));
-    assertEquals(new Integer(2), s2.getSiblingNumber());
+    assertEquals(Integer.valueOf(2), s2.getSiblingNumber());
     assertEquals(3, sut.getFirstAvailableSiblingNumber(SampleImpl.class, partialAlias));
   }
 
@@ -54,9 +54,9 @@ public class HibernateSiblingNumberGeneratorIT extends AbstractDAOTest {
     DetailedSample s1 = (DetailedSample) sessionFactory.getCurrentSession().get(SampleImpl.class, 16L);
     DetailedSample s2 = (DetailedSample) sessionFactory.getCurrentSession().get(SampleImpl.class, 17L);
     assertTrue(s1.getAlias().startsWith(partialAlias));
-    assertEquals(new Integer(1), s1.getSiblingNumber());
+    assertEquals(Integer.valueOf(1), s1.getSiblingNumber());
     assertTrue(s2.getAlias().startsWith(partialAlias));
-    assertEquals(new Integer(2), s2.getSiblingNumber());
+    assertEquals(Integer.valueOf(2), s2.getSiblingNumber());
     assertEquals(1, sut.getFirstAvailableSiblingNumber(SampleImpl.class, partialAlias));
   }
 
